MI100_results/results/knn/sycl.log
~/sycl_workspace/llvm/build/bin/clang++ -fsycl --gcc-toolchain=/home/ga27mex2/spack_rome2/spack/opt/spack/linux-sle_hpc15-zen2/gcc-14.2.0/gcc-14.2.0-5o6uafvyeefoza5cmnze5vcuwbdhzj6o/ -fsycl-targets=amdgcn-amd-amdhsa -Xsycl-target-backend --offload-arch=gfx908 -I/home/ga27mex2/sycl_workspace/llvm/build/lib/libsycl.so.8 -DUSE_GPU -DUSE_GPU -O3 -O3 -c main.cpp -o main.o
main.cpp:253:10: error: use of undeclared identifier 'sqrtf'
  253 |   return sqrtf(sum);
      |          ^
main.cpp:412:9: error: use of undeclared identifier 'fabs'
  412 |     if (fabs(dist[i] - knn_dist[i]) <= precision) {
      |         ^
2 errors generated.
make: *** [Makefile:71: main.o] Error 1
